# aoflagger

./: CMakeLists.txt  Doxyfile.in  cmakestrap-clang.sh  cmakestrap-debug.sh
src/: CMakeLists.txt  aoflagger.cpp  aofrequencyfilter.cpp  aoqplot.cpp  aoquality.cpp  aoremoteclient.cpp  badstations.cpp  baseexception.h  cleaner.cpp  cleaner.h  colormapper.cpp  createuv.cpp  flag.cpp  flagtest.cpp  imgzenith.cpp  ms2uv.cpp  msinfo.cpp  rfigui.cpp  rfihistory.cpp  rfistrategy.cpp  types.h  vectortypes.h  version.h
src/gui/: addstrategyactionmenu.h  application.cpp  application.h  complexplaneplotwindow.cpp  complexplaneplotwindow.h  editstrategywindow.cpp  editstrategywindow.h  gotowindow.cpp  gotowindow.h  gtkmm-compat.h  highlightwindow.cpp  highlightwindow.h  histogramwindow.h  imagecomparisonwidget.cpp  imagecomparisonwidget.h  imageplanewindow.cpp  imageplanewindow.h  imagepropertieswindow.cpp  imagepropertieswindow.h  imagewidget.cpp  imagewidget.h  msoptionwindow.cpp  msoptionwindow.h  numinputdialog.h  plotframe.cpp  plotframe.h  plotwindow.cpp  plotwindow.h  progresswindow.cpp  progresswindow.h  rfiguiwindow.cpp  rfiguiwindow.h  strategywizardwindow.cpp  strategywizardwindow.h
src/gui/controllers/: rfiguicontroller.cpp  rfiguicontroller.h
src/gui/plot/: colorscale.cpp  colorscale.h  dimension.h  horizontalplotscale.cpp  horizontalplotscale.h  plot2d.cpp  plot2d.h  plot2dpointset.h  plotable.h  plotmanager.h  plotpropertieswindow.cpp  plotpropertieswindow.h  plotwidget.h  system.h  tickset.h  verticalplotscale.cpp  verticalplotscale.h
src/gui/quality/: antennaeplotpage.h  aoqplotwindow.cpp  aoqplotwindow.h  baselineplotpage.cpp  baselineplotpage.h  blengthplotpage.h  datawindow.cpp  datawindow.h  frequencyplotpage.h  grayscaleplotpage.cpp  grayscaleplotpage.h  histogrampage.cpp  histogrampage.h  openoptionswindow.h  plotsheet.h  summarypage.h  timefrequencyplotpage.cpp  timefrequencyplotpage.h  timeplotpage.h  twodimensionalplotpage.cpp  twodimensionalplotpage.h
src/gui/strategyframes/: absthresholdframe.h  baselineselectionframe.h  changeresolutionframe.h  cutareaframe.h  directionprofileframe.h  foreachbaselineframe.h  foreachcomplexcomponentframe.h  foreachmsframe.h  foreachpolarisationframe.h  frequencyconvolutionframe.h  frequencyselectionframe.h  fringestoppingframe.h  highpassfilterframe.h  iterationframe.h  plotframe.h  resamplingframe.h  setflaggingframe.h  setimageframe.h  slidingwindowfitframe.h  spatialcompositionframe.h  statisticalflaggingframe.h  sumthresholdframe.h  svdframe.h  timeconvolutionframe.h  timeselectionframe.h  uvprojectframe.h
src/imaging/: defaultmodels.h  model.cpp  model.h  observatorium.h  uvimager.cpp  uvimager.h  zenithimager.cpp  zenithimager.h
src/interface/: aoflagger.cpp  aoflagger.h  interface.dox
src/msio/: antennainfo.h  arraycolumniterator.h  baselinematrixloader.cpp  baselinematrixloader.h  baselinereader.cpp  baselinereader.h  colormap.cpp  colormap.h  directbaselinereader.cpp  directbaselinereader.h  fitsfile.cpp  fitsfile.h  image2d.cpp  image2d.h  indirectbaselinereader.cpp  indirectbaselinereader.h  mask2d.cpp  mask2d.h  measurementset.cpp  measurementset.h  memorybaselinereader.cpp  memorybaselinereader.h  msrowdata.h  parmtable.h  pngfile.cpp  pngfile.h  rawdescfile.h  reorderedfilebuffer.h  rspreader.cpp  rspreader.h  samplerow.cpp  samplerow.h  scalarcolumniterator.h  segmentedimage.h  sortedtimestepaccessor.cpp  sortedtimestepaccessor.h  spatialtimeloader.cpp  spatialtimeloader.h  stokesimager.cpp  stokesimager.h  (+5 more)
src/quality/: baselinestatisticsmap.h  defaultstatistics.h  histogramcollection.cpp  histogramcollection.h  histogramtablesformatter.cpp  histogramtablesformatter.h  loghistogram.h  qualitytablesformatter.cpp  qualitytablesformatter.h  rayleighfitter.cpp  rayleighfitter.h  statisticalvalue.h  statisticscollection.cpp  statisticscollection.h  statisticsderivator.h
src/ref/: reffile.h  reffileentry.h  reffileexception.h
src/remote/: client.cpp  client.h  clusteredobservation.cpp  clusteredobservation.h  format.h  hostname.h  nodecommandmap.h  observationtimerange.h  processcommander.cpp  processcommander.h  remoteprocess.h  server.cpp  server.h  serverconnection.cpp  serverconnection.h
src/strategy/actions/: absthresholdaction.h  action.h  adapter.h  addstatisticsaction.h  baselineselectionaction.cpp  baselineselectionaction.h  calibratepassbandaction.h  changeresolutionaction.cpp  changeresolutionaction.h  combineflagresultsaction.h  cutareaaction.h  directionalcleanaction.h  directionprofileaction.h  eigenvalueverticalaction.h  foreachbaselineaction.cpp  foreachbaselineaction.h  foreachcomplexcomponentaction.h  foreachmsaction.cpp  foreachmsaction.h  foreachpolarisationaction.h  foreachsimulatedbaselineaction.h  fouriertransformaction.h  frequencyconvolutionaction.h  frequencyselectionaction.cpp  frequencyselectionaction.h  fringestopaction.cpp  fringestopaction.h  highpassfilteraction.h  imageraction.cpp  imageraction.h  iterationaction.h  normalizevarianceaction.cpp  normalizevarianceaction.h  plotaction.cpp  plotaction.h  quickcalibrateaction.h  resamplingaction.h  setflaggingaction.h  setimageaction.h  slidingwindowfitaction.cpp  (+19 more)
src/strategy/algorithms/: baselineselector.cpp  baselineselector.h  baselinetimeplaneimager.h  convolutions.h  eigenvalue.cpp  eigenvalue.h  fringestoppingfitter.cpp  fringestoppingfitter.h  fringetestcreater.cpp  fringetestcreater.h  highpassfilter.cpp  highpassfilter.h  (+34 more)
src/structures/: antennainfo.h  arraycolumniterator.h  colormap.cpp  colormap.h  date.h  image2d.cpp  image2d.h  msrowdata.h  msrowdataext.h  scalarcolumniterator.h  system.h  timefrequencydata.cpp  timefrequencydata.h  timefrequencymetadata.h
src/util/: aologger.cpp  aologger.h  autoarray.h  compress.cpp  compress.h  ffttools.cpp  ffttools.h  integerdomain.cpp  integerdomain.h  multiplot.cpp  multiplot.h  numberlist.h  numberparser.h  parameter.h  plot.cpp  plot.h  progresslistener.h  rng.cpp  rng.h  roctree.cpp  roctree.h  serializable.h  stopwatch.cpp  stopwatch.h  types.h  xmlwriter.h
(+77 files in other folders)
